<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RedShift Web Browser</string>
    <string name="title_activity_browser">RedShift</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_bookmark">Bookmark</string>

    <!-- Content Description -->
    <string name="desc_btnBack">Back</string>
    <string name="desc_btnSetting">Settings</string>
    <string name="hint_txtUrl">redshift:home</string>
    <string name="separator">separator</string>
    <string name="btn_hist_delete_cd">Delete</string>
    <string name="btn_tab_close_cd">Close</string>
    <string name="img_ssl_cd">SSL Connection</string>

    <!-- Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_home">home</string>
    <string name="menu_clearhistory">Clear</string>
    <string name="menu_share">Share</string>
    <string name="menu_addbookmark">Add</string>
    <string name="menu_history">History</string>
    <string name="menu_bookmark">Bookmarks</string>
    <string name="menu_sort_bytitle">By Title</string>
    <string name="menu_sort_bydate">By Date</string>
    <string name="menu_search">Search</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_hist_search">Search</string>
    <string name="menu_history_yesterday">Yesterday</string>
    <string name="menu_history_last7days">Last 7 Days</string>
    <string name="menu_history_thismonth">This month</string>
    <string name="menu_history_infinity">Infinity</string>
    
    <!-- Webview Context Menu -->
    <string name="menu_wl_newtab_desc">Open in new tab</string>
    <string name="menu_wl_newprivtab_desc">Open in new private tab</string>
    <string name="menu_wl_share_desc">Share</string>
    <string name="menu_wi_saveimage_desc">Save image</string>
    
    
    <string name="menu_bo_edit">Edit</string>
    <string name="menu_bo_delete">Delete</string>

    <!-- Tab Menu -->
    <string name="btn_newtab">New</string>
    <string name="btn_newprivatetab">New Private Tab</string>
    <string name="btn_closetab">Close</string>
    <string name="btn_sharetab">Share</string>
    <string name="btn_booktab">Bookmark</string>
    <string name="btn_home">Home</string>

    <!-- Preference -->
    <string name="pref_cat_general">General</string>
    <string name="pref_cat_privacy">Privacy</string>
    <string name="pref_cat_advanced">Advanced</string>
    <string name="pref_history">History</string>
    <string name="pref_history_summary">Remember browsing history</string>
    <string name="pref_js">Javascript</string>
    <string name="pref_js_summary">Enable Javascript</string>
    <string name="pref_cookie">Accept cookies</string>
    <string name="pref_cookie_summary">Allow cookies to be saved and read</string>
    <string name="pref_cookie_exit">Clear all cookies</string>
    <string name="pref_cookie_exit_summary">Clear all cookie on exit</string>
    <string name="pref_homepage">Home page</string>
    <string name="pref_homepage_summary">Set your browser home page</string>
    <string name="pref_save_formdata">Form data</string>
    <string name="pref_save_formdata_summary">Save form data for later</string>
    <string name="pref_save_passwd">Password</string>
    <string name="pref_save_passwd_summary">Save username and password</string>
    <string name="pref_image">Image</string>
    <string name="pref_image_summary">Load website images</string>
    <string name="pref_plugin">Plug-ins</string>
    <string name="pref_plugin_summary">Allow plug-ins to play rich content</string>
    <string name="pref_useragent">User agent</string>
    <string name="pref_useragent_summary">Choose an user agent</string>
    <string name="pref_about">About</string>
    <string name="pref_clearcookie">Delete all cookies</string>
    <string name="pref_clearcache">Delete cache</string>

    <string-array name="pref_plugin_list">
        <item>On Demand</item>
        <item>Enable</item>
        <item>Disable</item>
    </string-array>
    <string-array name="pref_useragent_list">
        <item>Android</item>
        <item>Desktop</item>
        <item>iPhone</item>
        <item>Internet Explorer</item>
    </string-array>

    <!-- Dialog -->
    <string name="dia_addbookmark_title">Add Bookmark</string>
    <string name="dia_txt_title_hint">title</string>
    <string name="dia_txt_url_hint">URL</string>
    <string name="dia_txt_tag_hint">Tags</string>
    <string name="dia_txt_title">Title</string>
    <string name="dia_txt_url">URL</string>
    <string name="dia_txt_tag">Tags</string>
    <string name="dia_txt_showinhome">Show bookmark in homepage</string>

</resources>