<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		  xmlns:tools="http://schemas.android.com/tools"
    			android:id="@+id/controlbar"
        		  android:layout_width="fill_parent"
		    	  android:layout_height="40dp"
		    	  android:orientation="horizontal"
			      android:layout_alignParentBottom="true"
				  android:layout_alignParentLeft="true"
				  style="?android:attr/actionBarStyle">
        
     <EditText android:id="@+id/txtUrl"
         	  android:layout_width="0dp"
         	  android:layout_weight="1"
         	  android:layout_height="match_parent" 
         	  android:hint="@string/hint_txtUrl"
         	  android:inputType="textUri|textAutoComplete"
         	  android:imeOptions="actionGo"
         	  />
     
     <ImageButton android:id="@+id/btnListTab"
         		 android:layout_height="match_parent"
         		 android:layout_width="wrap_content"
         		 android:onClick="onBtnListTab"
         		 android:src="@drawable/img_collectiontab_light"
         		 android:contentDescription="@string/desc_btnBack"
         		 style="?android:attr/borderlessButtonStyle"
         />
     
     <ImageButton android:id="@+id/btnNewTab"
         		 android:layout_height="match_parent"
         		 android:layout_width="wrap_content"
         		 android:src="@drawable/img_newtab_light"
         		 android:onClick="onBtnNewTab"
         		 android:contentDescription="@string/desc_btnBack"
         		 style="?android:attr/borderlessButtonStyle"
         />
     
     <ImageButton android:src="@drawable/img_setting_light"
         		 android:contentDescription="@string/desc_btnSetting"
         		 android:id="@+id/btnSetting"
         		 android:layout_width="wrap_content"
         	   	 android:layout_height="match_parent"
         	   	 android:onClick="onBtnShowPopup"
         	   	 style="?android:attr/borderlessButtonStyle"
         	   	  />

         		
     
 </LinearLayout>
