<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			android:id="@+id/layout_main_content"
        		 android:layout_width="fill_parent"
        		 android:layout_height="fill_parent"
        		 android:layout_marginBottom="40dp"
        		 
        		 >
     <ProgressBar android:id="@+id/browser_progressbar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_gravity="center_horizontal|top"
    	android:layout_width="fill_parent"
    	android:layout_height="3dp"
    	android:minHeight="3dp"
    	android:maxHeight="3dp"
    />
    
     <FrameLayout android:id="@+id/layout_content"
        		 android:layout_width="fill_parent"
        		 android:layout_height="fill_parent"
        		 android:layout_gravity="center_horizontal|top"
        		 />
     
    <LinearLayout android:id="@+id/layout_tabmenu"
            	  android:layout_width="fill_parent"
            	  android:layout_height="wrap_content"
            	  android:orientation="vertical"
            	  android:layout_gravity="center_horizontal|bottom"
            	  android:visibility="gone"
            	  android:focusable="true"
            	  style="@style/Theme.RedShift.TabMenu">
            		  
    	<ListView android:id="@+id/list_tab" 
    	    	  android:layout_width="fill_parent"
    	    	  android:layout_height="wrap_content"/>
    	
    	<ImageView  android:src="@drawable/holo_separator_dark"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:scaleType="fitXY"
				    android:paddingLeft="5dp"
				    android:paddingRight="5dp"
				    android:paddingBottom="2dp"
				    android:paddingTop="2dp"
				    android:contentDescription="@string/separator" />
    	
    	
    	<LinearLayout android:layout_width="fill_parent"
            		  android:layout_height="wrap_content"
            		  android:orientation="horizontal"
            		  android:padding="3dp">
            		  
    	    <Button android:id="@+id/btn_sharetab"
    	        	android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    android:onClick="onBtnShare"
				    android:text="@string/btn_sharetab"
				    android:drawableLeft="@drawable/img_share"
				    style="@style/Theme.RedShift.Button"
				    
				    />
    	    
    	    <Button android:id="@+id/btn_booktab"
    	        	android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    android:onClick="onBtnAddBookmark"
				    android:text="@string/btn_booktab"
				    android:drawableLeft="@drawable/img_bookmark_add"
				    style="@style/Theme.RedShift.Button"
				    />
    	    
    	    <Button android:id="@+id/btn_closetab"
    	        	android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    android:onClick="onBtnCloseTab"
				    android:text="@string/btn_closetab"
				    android:drawableLeft="@drawable/img_close_tab"
				    style="@style/Theme.RedShift.Button"
				    />
    	    
    	    <Button android:id="@+id/btn_newtab"
    	        	android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    android:onClick="onBtnNewTab"
				    android:text="@string/btn_newtab"
				    android:drawableLeft="@drawable/img_newtab"
				    style="@style/Theme.RedShift.Button"
				    />
    	    
    	    <Button android:id="@+id/btn_home"
    	        	android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    android:onClick="onBtnHome"
				    android:text="@string/btn_home"
				    android:drawableLeft="@drawable/img_home"
				    style="@style/Theme.RedShift.Button"
				    />
    	    
    	</LinearLayout>
    	
    </LinearLayout>  
    
</FrameLayout>
    
<!-- 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
    android:layout_marginBottom="40dp"
    android:layout_alignParentTop="true"
    	android:layout_alignParentLeft="true">
    
    <ProgressBar android:id="@+id/browser_progressbar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_alignParentTop="true"
    	android:layout_alignParentLeft="true"
    	android:layout_width="fill_parent"
    	android:layout_height="3dp"
    	android:minHeight="3dp"
    	android:maxHeight="3dp"
    />
    
    <FrameLayout android:id="@+id/layout_content"
        		 android:layout_width="fill_parent"
        		 android:layout_height="fill_parent"
        		 android:layout_below="@id/browser_progressbar"
        		 >
     
    </FrameLayout>
    
       	
</RelativeLayout>
 -->
    <!-- 	 
    <LinearLayout android:id="@+id/ttt"
            		  android:layout_width="fill_parent"
            		  android:layout_height="fill_parent"
            		  android:layout_alignParentBottom="true"
            		  >
    	<EditText android:id="@+id/txtUrlsdsd"
         	  android:layout_width="0dp"
         	  android:layout_weight="1"
         	  android:layout_height="match_parent" 
         	  android:hint="@string/hint_txtUrl"
         	  android:inputType="textUri|textAutoComplete"
         	  android:imeOptions="actionGo"
         	  android:selectAllOnFocus="true"
         	  />
    </LinearLayout>    
 -->