<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			android:id="@+id/layout_tabmenu"
            	  android:layout_width="fill_parent"
            	  android:layout_height="wrap_content"
            	  android:orientation="vertical"
            	  android:layout_gravity="center_horizontal|bottom"
            	  android:gravity="bottom|center"
            	  android:visibility="gone"
            	  android:focusable="true"
            	  android:padding="0dp"
            	  android:layout_margin="0dp"
            	  style="@style/TabMenu">
            		  
    	<ListView android:id="@+id/list_tab" 
    	    	  android:layout_width="fill_parent"
    	    	  android:layout_height="wrap_content"
    	    	  android:layout_margin="4dp"
    	    	  />
    	
    	<ImageView android:background="@drawable/holo_separator_dark"
    	    	   android:layout_width="fill_parent"
            	   android:layout_height="1dp"
            	   android:contentDescription="@string/separator"
            	    />
    	
    	<LinearLayout android:layout_width="fill_parent"
            	  	  android:layout_margin="2dp"
            	  	  android:layout_height="32dp"
            	  	  android:orientation="horizontal"
            	  	  style="@style/TabMenuNavigation">
            	  	  
    	    <ImageButton android:id="@+id/btn_home"
    	        	android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:onClick="onBtnHome"
				    android:contentDescription="@string/btn_home"
				    android:src="@drawable/img_home"
				    style="@style/Borderless" />
    	    
    	    <ImageButton android:id="@+id/btn_booktab"
    	        	android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:onClick="onBtnAddBookmark"
				    android:contentDescription="@string/btn_booktab"
				    android:src="@drawable/img_bookmark_add"
				    style="@style/Borderless" />
    	    
    	    <ImageButton android:id="@+id/btn_sharetab"
    	        	android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:onClick="onBtnShare"
				    android:contentDescription="@string/btn_sharetab"
				    android:src="@drawable/img_share"
				    style="@style/Borderless" />
    	    
    	    <ImageButton android:id="@+id/btn_newprivatetab"
    	        	android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:onClick="onBtnNewPrivateTab"
				    android:contentDescription="@string/btn_newprivatetab"
				    android:src="@drawable/img_newprivatetab"
				    style="@style/Borderless" />
    	    
    	    <ImageButton android:id="@+id/btn_newtab"
    	        	android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:onClick="onBtnNewTab"
				    android:contentDescription="@string/btn_newtab"
				    android:src="@drawable/img_newtab"
				    style="@style/Borderless" />
    	</LinearLayout>
    	
    	<!-- 
    	<ImageView  android:src="@drawable/holo_separator_dark"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:scaleType="fitXY"
				    android:paddingLeft="5dp"
				    android:paddingRight="5dp"
				    android:paddingBottom="2dp"
				    android:paddingTop="2dp"
				    android:contentDescription="@string/separator" />
    	 
    	
    	<LinearLayout android:layout_width="fill_parent"
            		  android:layout_height="wrap_content"
            		  android:orientation="horizontal"
            		  android:padding="3dp">
            		  
    	    <Button android:id="@+id/btn_sharetab"
    	        	android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    android:onClick="onBtnShare"
				    android:text="@string/btn_sharetab"
				    android:drawableLeft="@drawable/img_share"
				    style="@style/Theme.RedShift.Button"
				    
				    />
    	    
    	    <Button android:id="@+id/btn_booktab"
    	        	android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    android:onClick="onBtnAddBookmark"
				    android:text="@string/btn_booktab"
				    android:drawableLeft="@drawable/img_bookmark_add"
				    style="@style/Theme.RedShift.Button"
				    />
    	    
    	    <Button android:id="@+id/btn_closetab"
    	        	android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    android:onClick="onBtnCloseTab"
				    android:text="@string/btn_closetab"
				    android:drawableLeft="@drawable/img_close_tab"
				    style="@style/Theme.RedShift.Button"
				    />
    	    
    	    <Button android:id="@+id/btn_newtab"
    	        	android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    android:onClick="onBtnNewTab"
				    android:text="@string/btn_newtab"
				    android:drawableLeft="@drawable/img_newtab"
				    style="@style/Theme.RedShift.Button"
				    />
    	    
    	    <Button android:id="@+id/btn_home"
    	        	android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    android:onClick="onBtnHome"
				    android:text="@string/btn_home"
				    android:drawableLeft="@drawable/img_home"
				    style="@style/Theme.RedShift.Button"
				    />
    	    
    	</LinearLayout>
    	-->
    	
    </LinearLayout>  